# PaddleOCR

./: .clang_format.hook  .gitattributes  .gitignore  .lycheeignore  .pdm-python  .pre-commit-config.yaml  .style.yapf  1_run_ocr.sh  20230505pipeline1.py  20230511pipeline.py  20230515pipeline_v1.py  20230520pipeline.py  20230521pipline.py  20230522.py  20230821.py  2_run_ocr.sh  CLOUDFLARE_DEPLOYMENT_SUMMARY.md  CNAME  Clean_PaddleOCR_Aug18.ipynb  Config参数调整说明.txt  Cross_encoder_with_different_product_types.ipynb  Dockerfile  Dockerfile.inference  LICENSE  MANIFEST.in  PDF2WORD.md  PaddleOCR.code-workspace  README.md  README_ar.md  README_ch.md  README_cn.md  README_en.md  README_es.md  README_fr.md  README_i18n.md  README_ja.md  README_ja_v1.md  README_ja_v2.md  README_ko.md  README_ru.md  (+80 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.script/: README.md  meter_dict.txt  train.sh
73docs/: algorithm_det_drrg.md
PPOCRLabel/: Makefile  PPOCRLabel.py  README.md  README_ch.md  README_en.md  combobox.py  docvqa_predefine.py  editinlist.py  gen_ocr_train_val_test.py  setup.cfg  (+6 more)
deploy/android_demo/app/src/main/cpp/: CMakeLists.txt  common.h  native.cpp  native.h  ocr_clipper.cpp  ocr_clipper.hpp  ocr_cls_process.cpp  ocr_cls_process.h  ocr_crnn_process.cpp  ocr_crnn_process.h  ocr_db_post_process.cpp  ocr_db_post_process.h  ocr_ppredictor.cpp  ocr_ppredictor.h  ppredictor.cpp  ppredictor.h  predictor_input.cpp  predictor_input.h  predictor_output.cpp  predictor_output.h  preprocess.cpp  preprocess.h
deploy/cpp_infer/: CLI.cc  CMakeLists.txt  CMakeLists_det.txt  CMakeLists_rec.txt  CMakeLists_system.txt  cli.cc  inference  readme.md  readme_ch.md  readme_en.md
deploy/cpp_infer/THIRD_PARTY_LICENSES/tensorRT_Pro/: LICENSE
deploy/cpp_infer/VS2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ocr_system.sln  ocr_system.vcxproj  ocr_system.vcxproj.filters
deploy/cpp_infer/VS2015/test/: ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h  test.cpp  test.vcxproj  test.vcxproj.filters
deploy/cpp_infer/docs/: windows_vs2019_build.md  windows_vs2022_build.md
deploy/cpp_infer/external-cmake/: auto-log.cmake
deploy/cpp_infer/include/: OCRResult.h  PaddleOCR.h  Parameter.h  args.h  autolog.h  clipper.h  config.h  exports.h  ocr_cls.h  ocr_defines.h  ocr_det.h  ocr_rec.h  paddle_ocr.h  paddleocr.h  paddlestructure.h  postprocess_op.h  preprocess_op.h  structure_layout.h  structure_table.h  thread_pool.h  utility.h
deploy/cpp_infer/src/: PaddleOCR.cpp  args.cpp  clipper.cpp  config.cpp  main.cpp  main_threadpool.cpp  main_threadpool.cpp.bak  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddle_ocr.cpp  paddleocr.cpp  paddlestructure.cpp  postprocess_op.cpp  preprocess_op.cpp  structure_layout.cpp  structure_table.cpp  utility.cpp
deploy/cpp_infer/src/API/models/: doc_img_orientation_classification.cc  text_detection.cc  text_image_unwarping.cc  text_recognition.cc  text_recognition.h
deploy/cpp_infer/src/API/pipelines/: doc_preprocessor.cc  doc_preprocessor.h  ocr.cc  ocr.h
deploy/cpp_infer/src/api/models/: doc_img_orientation_classification.cc  doc_img_orientation_classification.h  text_detection.cc  text_detection.h  text_image_unwarping.cc  text_image_unwarping.h  text_recognition.cc  text_recognition.h  textline_orientation_classification.cc  textline_orientation_classification.h
deploy/cpp_infer/src/api/pipelines/: base.h  doc_preprocessor.cc  doc_preprocessor.h  ocr.cc  ocr.h
deploy/cpp_infer/src/base/: base_batch_sampler.cc  base_batch_sampler.h  base_cv_result.cc  base_cv_result.h  base_pipeline.cc  base_pipeline.h  base_predictor.cc  base_predictor.h
deploy/cpp_infer/src/common/: image_batch_sampler.cc  image_batch_sampler.h  parallel.h  processors.cc  processors.h  static_infer.cc  static_infer.h  thread_pool.cc  thread_pool.h
deploy/cpp_infer/src/configs/: OCR.yaml  doc_preprocessor.yaml
deploy/cpp_infer/src/modules/image_classification/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
deploy/cpp_infer/src/modules/image_unwarping/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
deploy/cpp_infer/src/modules/text_detection/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
deploy/cpp_infer/src/modules/text_recognition/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
deploy/cpp_infer/src/paddleocr/_models/: doc_img_orientation_classification.h  text_image_unwarping.cc  textline_orientation_classification.cc
deploy/cpp_infer/src/paddleocr/_pipelines/: base.h  doc_preprocessor.cc  doc_preprocessor.h  ocr.cc
deploy/cpp_infer/src/pipelines/doc_preprocessor/: pipeline.cc  pipeline.h  result.cc  result.h
deploy/cpp_infer/src/pipelines/ocr/: pipeline.cc  pipeline.h  result.cc  result.h
deploy/cpp_infer/src/utils/: args.cc  args.h  func_register.cc  func_register.h  ilogger.cc  ilogger.h  mkldnn_blocklist.cc  mkldnn_blocklist.h  pp_option.cc  pp_option.h  utility.cc  utility.h  yaml_config.cc  yaml_config.h
deploy/cpp_infer/src_det/: main.cpp  ocr_det.cpp  utility.cpp
deploy/cpp_infer/src_rec/: main.cpp  ocr_rec.cpp
deploy/cpp_infer/src_system/: main.cpp  ocr_det.cpp  ocr_rec.cpp
deploy/cpp_infer/tools/: build.sh  build_opencv.sh  config.txt  run.sh
deploy/fastdeploy/ascend/cpp/: CMakeLists.txt  README.md  infer.cc
deploy/fastdeploy/cpu-gpu/cpp/: CMakeLists.txt  README.md  infer.cc  infer_cls.cc  infer_det.cc  infer_rec.cc
deploy/fastdeploy/cpu-gpu/csharp/: CMakeLists.txt  README.md  infer.cs
mcp_server/: README.md  README_en.md  README_zh.md  claude_desktop_config_example.json  core_ocr.py  local_config.json  main.py  pyproject.toml  requirements.txt
mcp_server/config_example/: aistudio_structure.json  local_ocr.json  local_structure.json  self_hosted_ocr.json  self_hosted_structure.json
mcp_server/paddleocr_mcp/: __init__.py  __main__.py  core.py  pipelines.py
mcp_server/sample_configs/: aistudio_ocr.json  local_ocr.json
(+21023 files in other folders)
